--- a/css/style.css
+++ b/css/style.css
@@ -403,6 +403,7 @@ body.lock {
     display: -moz-box;
     display: -ms-flexbox;
     display: flex;
+    flex-wrap: wrap;
     position: relative;
     z-index: 2;
 }
